--- a/Themes/config/default/settingsfields.cshtml
+++ b/Themes/config/default/settingsfields.cshtml
@@ -85,6 +85,49 @@
             @CheckBoxList(info, "genxml/checkboxlist/chronopostproductcode", ResourceKey("Chronopost.productcodelist", "", "datavalue").ToString(), ResourceKey("Chronopost.productcodelist", "", "data").ToString())
         </div>
     </div>
+    <div>
+        @{
+            var productList = ResourceKey("Chronopost.productcodelist", "", "datavalue").ToString().Split(',');
+            var productTextList = ResourceKey("Chronopost.productcodelist", "", "data").ToString().Split(',');
+            var lp = 0;
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">
+                    &nbsp;
+                </label>
+                <div class="col-sm-5">
+                    <table>
+                                <tr>
+                                    <th>Overwrite Price (TCC)</th>
+                                    <th>TVA</th>
+                                    <th></th>
+                                </tr>
+
+                        @foreach (var p in productList)
+                        {
+                    <tr>
+                        <td>
+                            @NBrightTextBox(info, "genxml/textbox/overwritepricettc" + p.ToLower(), "", "")
+                        </td>
+                        <td>
+                            @NBrightTextBox(info, "genxml/textbox/overwritepricetva" + p.ToLower(), "", "")
+                        </td>
+                        <td>
+                            &nbsp; @productTextList[lp]
+                        </td>
+                    </tr>
+                        lp += 1;
+                        }
+
+                    </table>
+                </div>
+            </div>
+
+
+        }
+
+
+    </div>
     <div class="form-group">
         <label class="col-sm-2 control-label">
             @ResourceKey("Chronopost.freeshippinglimit")
@@ -94,7 +137,5 @@
         </div>
     </div>
 
-</div>
-
-<div class="clearfix"></div>
+    <div class="clearfix"></div>
 
